image and colors

--- a/ufo-level-1/style.css
+++ b/ufo-level-1/style.css
@@ -5,7 +5,7 @@
 }
 
 .jumbotron {
-    background-image: url("./img/background.jpg");
+    background-image: url("static/images/kate.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     display: compact;
